--- a/index.html
+++ b/index.html
@@ -5,19 +5,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BKRJ Vet - Klinika Weterynaryjna</title>
   <style>
-    body { margin: 0; font-family: Arial, sans-serif; line-height: 1.6; }
-    header { background: #4CAF50; color: #fff; padding: 20px 0; }
-    .navbar { display: flex; justify-content: space-between; align-items: center; max-width: 1200px; margin: 0 auto; padding: 0 20px; }
-    .navbar a { color: #fff; text-decoration: none; margin: 0 15px; font-weight: bold; }
-    .navbar a:hover { text-decoration: underline; }
-    .hero { background: url('https://via.placeholder.com/1200x400') no-repeat center center/cover; height: 400px; position: relative; }
-    .hero-text { position: absolute; bottom: 20px; left: 20px; color: #fff; background: rgba(0, 0, 0, 0.5); padding: 10px; border-radius: 5px; }
-    .container { max-width: 1200px; margin: 20px auto; padding: 0 20px; }
-    .section { margin-bottom: 40px; }
-    .section h2 { color: #4CAF50; margin-bottom: 10px; }
-    footer { background: #f4f4f4; padding: 20px 0; }
-    footer .container { display: flex; justify-content: space-between; flex-wrap: wrap; }
-    footer p { margin: 5px 0; }
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+    }
+    header {
+      background: #4CAF50;
+      color: #fff;
+      padding: 20px 0;
+    }
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 20px;
+    }
+    .navbar a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+    .navbar a:hover {
+      text-decoration: underline;
+    }
+    .hero {
+      background: url('https://via.placeholder.com/1200x400') no-repeat center center/cover;
+      height: 400px;
+      position: relative;
+    }
+    .hero-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #fff;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 15px 20px;
+      border-radius: 5px;
+      text-align: center;
+    }
+    .container {
+      max-width: 1200px;
+      margin: 20px auto;
+      padding: 0 20px;
+    }
+    .section {
+      margin-bottom: 40px;
+    }
+    .section h2 {
+      color: #4CAF50;
+      margin-bottom: 10px;
+    }
+    footer {
+      background: #f4f4f4;
+      padding: 20px 0;
+    }
+    footer .container {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+    footer p {
+      margin: 5px 0;
+    }
   </style>
 </head>
 <body>
@@ -27,6 +81,7 @@
       <nav>
         <a href="index.html">Strona główna</a>
         <a href="rejestracja.html">Rejestracja</a>
+        <a href="login.html">Logowanie</a>
         <a href="#about">O nas</a>
         <a href="#contact">Kontakt</a>
       </nav>
@@ -72,8 +127,8 @@
       </div>
       <div>
         <p>Godziny otwarcia:</p>
-        <p>Poniedziałek – Piątek: 8:00 – 18:00</p>
-        <p>Sobota: 9:00 – 14:00</p>
+        <p>Poniedziałek – Piątek: 8:00 – 18:00</p>
+        <p>Sobota: 9:00 – 14:00</p>
         <p>Niedziela: Nieczynne</p>
       </div>
     </div>
