--- a/login.html
+++ b/login.html
@@ -23,7 +23,20 @@
     h2 {
       text-align: center;
       color: #4CAF50;
+      margin-bottom: 10px;
+    }
+    .back-link {
+      display: block;
+      text-align: center;
       margin-bottom: 20px;
+      font-size: 14px;
+    }
+    .back-link a {
+      color: #4CAF50;
+      text-decoration: none;
+    }
+    .back-link a:hover {
+      text-decoration: underline;
     }
     label {
       display: block;
@@ -80,6 +93,11 @@
   <div class="container">
     <h2>Logowanie</h2>
 
+    <!-- Link powrotu do strony głównej -->
+    <div class="back-link">
+      <a href="index.html">← Powrót do strony głównej</a>
+    </div>
+
     <form id="login-form">
       <label for="email">Email:</label>
       <input type="email" id="email" required autocomplete="email" />
@@ -97,7 +115,7 @@
     </div>
   </div>
 
-  <!-- 1. Załaduj moduły Firebase (wersja 9+) z CDN -->
+  <!-- Firebase SDK + logika logowania -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
     import {
@@ -105,9 +123,6 @@
       signInWithEmailAndPassword
     } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
 
-    // ------------------------------------------------------------
-    // 1. Twoja konfiguracja Firebase – wklej dokładnie ten blok
-    // ------------------------------------------------------------
     const firebaseConfig = {
       apiKey: "AIzaSyCZoVVfUPSyS7zELBqEsLNYuVdBqfSq-BE",
       authDomain: "bkrj-vet.firebaseapp.com",
@@ -117,35 +132,26 @@
       appId: "1:289704325759:web:844ebae6cff71bbf40854a",
       measurementId: "G-EH0EC8NKXC"
     };
-    // Inicjalizacja Firebase
     const app  = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    // 2. Złapiemy elementy DOM
-    const loginForm     = document.getElementById('login-form');
-    const errorMessage  = document.getElementById('error-message');
+    const loginForm    = document.getElementById('login-form');
+    const errorMessage = document.getElementById('error-message');
 
-    // 3. Obsługa formularza logowania
     loginForm.addEventListener('submit', async (e) => {
       e.preventDefault();
 
-      // Pobranie danych
       const email    = document.getElementById('email').value.trim();
       const password = document.getElementById('password').value;
 
-      // Reset komunikatu o błędzie
       errorMessage.style.display = 'none';
       errorMessage.textContent   = '';
 
       try {
-        // Próba zalogowania:
         await signInWithEmailAndPassword(auth, email, password);
-        // Jeśli pomyślnie, przekierowujemy na stronę główną:
         window.location.href = "index.html";
       } catch (error) {
-        // Obsłuż błędy:
         let msg = "Wystąpił błąd przy logowaniu.";
-
         switch (error.code) {
           case "auth/user-not-found":
             msg = "Użytkownik o tym adresie e-mail nie istnieje.";
@@ -162,7 +168,6 @@
           default:
             msg = error.message;
         }
-
         errorMessage.textContent = msg;
         errorMessage.style.display = 'block';
       }
