--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       <nav id="nav-bar">
         <!-- Nadajemy id, aby skrypt JS mógł to ukrywać/pokazywać -->
         <a href="index.html">Strona główna</a>
+        <a href="umow-wizyte.html" id="nav-umow">Umów wizytę</a>
         <a href="rejestracja.html" id="nav-rejestracja">Rejestracja</a>
         <a href="login.html" id="nav-logowanie">Logowanie</a>
         <a href="#about">O nas</a>
