--- a/konto.html
+++ b/konto.html
@@ -158,6 +158,7 @@
       <div class="logo"><h1>BKRJ Vet</h1></div>
       <nav id="nav-bar">
         <a href="index.html">Strona główna</a>
+         <a href="umow-wizyte.html" id="nav-umow">Umów wizytę</a>
         <a href="rejestracja.html" id="nav-rejestracja">Rejestracja</a>
         <a href="login.html"       id="nav-logowanie">Logowanie</a>
         <a href="#about">O nas</a>
